eks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "www.fredbitenyo.click"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fleetman-webapp
            port: 
              number: 80
  - host: "queue.fredbitenyo.click"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fleetman-queue
            port: 
              number: 8161
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.fredbitenyo.click"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-grafana
            port: 
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.fredbitenyo.click" 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port: 
              number: 9090
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: "kibana.fredbitenyo.click" 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-logging
            port: 
              number: 5601
